--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.9",
     "@perplexity-ai/perplexity_ai": "^0.16.0",
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
@@ -34,6 +36,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "stripe": "^19.3.1",
     "typeorm": "^0.3.27",
     "uuid": "^13.0.0"
@@ -47,6 +50,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
